# CSA-Obsidian

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  chrome_cookies.py  cookies_copy.db  env.example  import_chrome_cookies.py  open_linkedin.py  pyproject.toml  test_practical.py
.github/workflows/: ci.yml
cli/: main.py
docs/: ARCHITECTURE.md
mcp_server/: __main__.py  server.py
profiles/default/: addonStartup.json.lz4  bounce-tracking-protection.sqlite  cookies.sqlite  cookies.sqlite-shm  cookies.sqlite-wal  extension-preferences.json  extensions.json  favicons.sqlite-shm  favicons.sqlite-wal  key4.db  permissions.sqlite  pkcs11.txt  places.sqlite-shm  places.sqlite-wal  prefs.js  storage.sqlite  times.json  webappsstore.sqlite-shm  xulstore.json
profiles/linkedin/: addonStartup.json.lz4  bounce-tracking-protection.sqlite  cookies.sqlite  cookies.sqlite-shm  extension-preferences.json  extensions.json  favicons.sqlite-shm  key4.db  permissions.sqlite  pkcs11.txt  places.sqlite-shm  prefs.js  sessionstore.jsonlz4  storage.sqlite  times.json  webappsstore.sqlite-shm
profiles/test/: addonStartup.json.lz4  compatibility.ini  extensions.json  key4.db  permissions.sqlite  pkcs11.txt  places.sqlite-shm  prefs.js  sessionstore.jsonlz4  storage.sqlite  times.json  (+1 more)
stealth_browser/: __init__.py  browser.py  chrome_import.py  config.py  errors.py  humanize.py  intercept.py  page_ops.py  session.py  snapshot.py
tasks/: base.py
tests/: conftest.py  test_browser.py  test_config.py  test_errors.py  test_intercept.py  test_mcp_server.py  test_page_ops.py  test_snapshot.py
(+547 files in other folders)
