[project]
name = "automation-stealth"
version = "0.1.0"
description = "SOTA stealth browser automation with Camoufox + MCP integration"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "camoufox>=0.4.11",
    "mcp>=1.27",
    "trafilatura>=2.0",
    "click>=8.0",
    "pycookiecheat>=0.8.0",
    "browser-cookie3>=0.20.1",
]

[project.urls]
Repository = "https://github.com/anton/automation-stealth"

[project.scripts]
stealth-browser = "cli.main:cli"
stealth-browser-mcp = "mcp_server.server:run"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["stealth_browser", "mcp_server", "cli", "tasks"]
omit = ["*/.venv/*", "*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
